@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,7 +17,6 @@ import static org.openhab.core.library.unit.SIUnits.CELSIUS;
 import static org.openhab.core.library.unit.Units.PERCENT;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -26,22 +25,23 @@ import javax.measure.quantity.Temperature;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.deconz.internal.dto.DeconzBaseMessage;
 import org.openhab.binding.deconz.internal.dto.SensorConfig;
-import org.openhab.binding.deconz.internal.dto.SensorMessage;
 import org.openhab.binding.deconz.internal.dto.SensorState;
 import org.openhab.binding.deconz.internal.dto.ThermostatUpdateConfig;
 import org.openhab.binding.deconz.internal.types.ThermostatMode;
 import org.openhab.core.library.types.DecimalType;
+import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.library.types.OpenClosedType;
 import org.openhab.core.library.types.QuantityType;
 import org.openhab.core.library.types.StringType;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.Thing;
 import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.binding.builder.ThingBuilder;
 import org.openhab.core.thing.type.ChannelKind;
 import org.openhab.core.types.Command;
 import org.openhab.core.types.RefreshType;
+import org.openhab.core.types.UnDefType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -65,8 +65,9 @@ import com.google.gson.Gson;
 public class SensorThermostatThingHandler extends SensorBaseThingHandler {
     public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_THERMOSTAT);
 
-    private static final List<String> CONFIG_CHANNELS = Arrays.asList(CHANNEL_BATTERY_LEVEL, CHANNEL_BATTERY_LOW,
-            CHANNEL_HEATSETPOINT, CHANNEL_TEMPERATURE_OFFSET, CHANNEL_THERMOSTAT_MODE);
+    private static final List<String> CONFIG_CHANNELS = List.of(CHANNEL_EXTERNAL_WINDOW_OPEN, CHANNEL_BATTERY_LEVEL,
+            CHANNEL_BATTERY_LOW, CHANNEL_HEATSETPOINT, CHANNEL_TEMPERATURE_OFFSET, CHANNEL_THERMOSTAT_MODE,
+            CHANNEL_THERMOSTAT_LOCKED);
 
     private final Logger logger = LoggerFactory.getLogger(SensorThermostatThingHandler.class);
 
@@ -83,23 +84,24 @@ public class SensorThermostatThingHandler extends SensorBaseThingHandler {
         }
         ThermostatUpdateConfig newConfig = new ThermostatUpdateConfig();
         switch (channelUID.getId()) {
-            case CHANNEL_HEATSETPOINT:
+            case CHANNEL_THERMOSTAT_LOCKED -> newConfig.locked = OnOffType.ON.equals(command);
+            case CHANNEL_HEATSETPOINT -> {
                 Integer newHeatsetpoint = getTemperatureFromCommand(command);
                 if (newHeatsetpoint == null) {
                     logger.warn("Heatsetpoint must not be null.");
                     return;
                 }
                 newConfig.heatsetpoint = newHeatsetpoint;
-                break;
-            case CHANNEL_TEMPERATURE_OFFSET:
+            }
+            case CHANNEL_TEMPERATURE_OFFSET -> {
                 Integer newOffset = getTemperatureFromCommand(command);
                 if (newOffset == null) {
                     logger.warn("Offset must not be null.");
                     return;
                 }
                 newConfig.offset = newOffset;
-                break;
-            case CHANNEL_THERMOSTAT_MODE:
+            }
+            case CHANNEL_THERMOSTAT_MODE -> {
                 if (command instanceof StringType) {
                     String thermostatMode = ((StringType) command).toString();
                     try {
@@ -117,11 +119,12 @@ public class SensorThermostatThingHandler extends SensorBaseThingHandler {
                 } else {
                     return;
                 }
-                break;
-            default:
+            }
+            case CHANNEL_EXTERNAL_WINDOW_OPEN -> newConfig.externalwindowopen = OpenClosedType.OPEN.equals(command);
+            default -> {
                 // no supported command
                 return;
-
+            }
         }
 
         sendCommand(newConfig, command, channelUID, null);
@@ -133,15 +136,18 @@ public class SensorThermostatThingHandler extends SensorBaseThingHandler {
         ThermostatMode thermostatMode = newConfig.mode;
         String mode = thermostatMode != null ? thermostatMode.name() : ThermostatMode.UNKNOWN.name();
         switch (channelUID.getId()) {
-            case CHANNEL_HEATSETPOINT:
-                updateQuantityTypeChannel(channelUID, newConfig.heatsetpoint, CELSIUS, 1.0 / 100);
-                break;
-            case CHANNEL_TEMPERATURE_OFFSET:
-                updateQuantityTypeChannel(channelUID, newConfig.offset, CELSIUS, 1.0 / 100);
-                break;
-            case CHANNEL_THERMOSTAT_MODE:
-                updateState(channelUID, new StringType(mode));
-                break;
+            case CHANNEL_THERMOSTAT_LOCKED -> updateSwitchChannel(channelUID, newConfig.locked);
+            case CHANNEL_HEATSETPOINT -> updateQuantityTypeChannel(channelUID, newConfig.heatsetpoint, CELSIUS,
+                    1.0 / 100);
+            case CHANNEL_TEMPERATURE_OFFSET -> updateQuantityTypeChannel(channelUID, newConfig.offset, CELSIUS,
+                    1.0 / 100);
+            case CHANNEL_THERMOSTAT_MODE -> updateState(channelUID, new StringType(mode));
+            case CHANNEL_EXTERNAL_WINDOW_OPEN -> {
+                Boolean open = newConfig.externalwindowopen;
+                if (open != null) {
+                    updateState(channelUID, open ? OpenClosedType.OPEN : OpenClosedType.CLOSED);
+                }
+            }
         }
     }
 
@@ -149,23 +155,47 @@ public class SensorThermostatThingHandler extends SensorBaseThingHandler {
     protected void valueUpdated(ChannelUID channelUID, SensorState newState, boolean initializing) {
         super.valueUpdated(channelUID, newState, initializing);
         switch (channelUID.getId()) {
-            case CHANNEL_TEMPERATURE:
-                updateQuantityTypeChannel(channelUID, newState.temperature, CELSIUS, 1.0 / 100);
-                break;
-            case CHANNEL_VALVE_POSITION:
-                updateQuantityTypeChannel(channelUID, newState.valve, PERCENT, 100.0 / 255);
-                break;
-            case CHANNEL_WINDOWOPEN:
+            case CHANNEL_TEMPERATURE -> updateQuantityTypeChannel(channelUID, newState.temperature, CELSIUS, 1.0 / 100);
+            case CHANNEL_VALVE_POSITION -> {
+                Integer valve = newState.valve;
+                if (valve == null || valve < 0 || valve > 100) {
+                    updateState(channelUID, UnDefType.UNDEF);
+                } else {
+                    updateQuantityTypeChannel(channelUID, valve, PERCENT, 1.0);
+                }
+            }
+            case CHANNEL_WINDOW_OPEN -> {
                 String open = newState.windowopen;
                 if (open != null) {
                     updateState(channelUID, "Closed".equals(open) ? OpenClosedType.CLOSED : OpenClosedType.OPEN);
                 }
-                break;
+            }
+            case CHANNEL_THERMOSTAT_ON -> updateSwitchChannel(channelUID, newState.on);
         }
     }
 
     @Override
-    protected void createTypeSpecificChannels(SensorConfig sensorConfig, SensorState sensorState) {
+    protected boolean createTypeSpecificChannels(ThingBuilder thingBuilder, SensorConfig sensorConfig,
+            SensorState sensorState) {
+        boolean thingEdited = false;
+        if (sensorConfig.locked != null && createChannel(thingBuilder, CHANNEL_THERMOSTAT_LOCKED, ChannelKind.STATE)) {
+            thingEdited = true;
+        }
+        if (sensorState.valve != null && createChannel(thingBuilder, CHANNEL_VALVE_POSITION, ChannelKind.STATE)) {
+            thingEdited = true;
+        }
+        if (sensorState.on != null && createChannel(thingBuilder, CHANNEL_THERMOSTAT_ON, ChannelKind.STATE)) {
+            thingEdited = true;
+        }
+        if (sensorState.windowopen != null && createChannel(thingBuilder, CHANNEL_WINDOW_OPEN, ChannelKind.STATE)) {
+            thingEdited = true;
+        }
+        if (sensorConfig.externalwindowopen != null
+                && createChannel(thingBuilder, CHANNEL_EXTERNAL_WINDOW_OPEN, ChannelKind.STATE)) {
+            thingEdited = true;
+        }
+
+        return thingEdited;
     }
 
     @Override
@@ -189,20 +219,5 @@ public class SensorThermostatThingHandler extends SensorBaseThingHandler {
             return null;
         }
         return newTemperature.scaleByPowerOfTen(2).intValue();
-    }
-
-    @Override
-    protected void processStateResponse(DeconzBaseMessage stateResponse) {
-        if (!(stateResponse instanceof SensorMessage)) {
-            return;
-        }
-
-        SensorMessage sensorMessage = (SensorMessage) stateResponse;
-        SensorState sensorState = sensorMessage.state;
-        if (sensorState != null && sensorState.windowopen != null) {
-            createChannel(CHANNEL_WINDOWOPEN, ChannelKind.STATE);
-        }
-
-        super.processStateResponse(stateResponse);
     }
 }
