@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,17 +19,18 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.persistence.influxdb.internal.FilterCriteriaQueryCreator;
 import org.openhab.persistence.influxdb.internal.InfluxDBConfiguration;
 import org.openhab.persistence.influxdb.internal.InfluxDBConstants;
+import org.openhab.persistence.influxdb.internal.InfluxDBMetadataService;
 import org.openhab.persistence.influxdb.internal.InfluxDBRepository;
 import org.openhab.persistence.influxdb.internal.InfluxPoint;
-import org.openhab.persistence.influxdb.internal.InfluxRow;
-import org.openhab.persistence.influxdb.internal.UnnexpectedConditionException;
+import org.openhab.persistence.influxdb.internal.UnexpectedConditionException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -51,38 +52,29 @@ import com.influxdb.query.FluxTable;
 @NonNullByDefault
 public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
     private final Logger logger = LoggerFactory.getLogger(InfluxDB2RepositoryImpl.class);
-    private InfluxDBConfiguration configuration;
-    @Nullable
-    private InfluxDBClient client;
-    @Nullable
-    private QueryApi queryAPI;
-    @Nullable
-    private WriteApi writeAPI;
+    private final InfluxDBConfiguration configuration;
+    private final InfluxDBMetadataService influxDBMetadataService;
 
-    public InfluxDB2RepositoryImpl(InfluxDBConfiguration configuration) {
+    private @Nullable InfluxDBClient client;
+    private @Nullable QueryApi queryAPI;
+    private @Nullable WriteApi writeAPI;
+
+    public InfluxDB2RepositoryImpl(InfluxDBConfiguration configuration,
+            InfluxDBMetadataService influxDBMetadataService) {
         this.configuration = configuration;
+        this.influxDBMetadataService = influxDBMetadataService;
     }
 
-    /**
-     * Returns if the client has been successfully connected to server
-     *
-     * @return True if it's connected, otherwise false
-     */
     @Override
     public boolean isConnected() {
         return client != null;
     }
 
-    /**
-     * Connect to InfluxDB server
-     *
-     * @return True if successful, otherwise false
-     */
     @Override
     public boolean connect() {
         InfluxDBClientOptions.Builder optionsBuilder = InfluxDBClientOptions.builder().url(configuration.getUrl())
                 .org(configuration.getDatabaseName()).bucket(configuration.getRetentionPolicy());
-        char[] token = configuration.getTokenAsCharArray();
+        char[] token = configuration.getToken().toCharArray();
         if (token.length > 0) {
             optionsBuilder.authenticateToken(token);
         } else {
@@ -92,15 +84,14 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
 
         final InfluxDBClient createdClient = InfluxDBClientFactory.create(clientOptions);
         this.client = createdClient;
-        logger.debug("Succesfully connected to InfluxDB. Instance ready={}", createdClient.ready());
+
         queryAPI = createdClient.getQueryApi();
         writeAPI = createdClient.getWriteApi();
+        logger.debug("Successfully connected to InfluxDB. Instance ready={}", createdClient.ready());
+
         return checkConnectionStatus();
     }
 
-    /**
-     * Disconnect from InfluxDB server
-     */
     @Override
     public void disconnect() {
         final InfluxDBClient currentClient = this.client;
@@ -110,11 +101,6 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
         this.client = null;
     }
 
-    /**
-     * Check if connection is currently ready
-     *
-     * @return True if its ready, otherwise false
-     */
     @Override
     public boolean checkConnectionStatus() {
         final InfluxDBClient currentClient = client;
@@ -133,13 +119,8 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
         }
     }
 
-    /**
-     * Write point to database
-     *
-     * @param point
-     */
     @Override
-    public void write(InfluxPoint point) {
+    public void write(InfluxPoint point) throws UnexpectedConditionException {
         final WriteApi currentWriteAPI = writeAPI;
         if (currentWriteAPI != null) {
             currentWriteAPI.writePoint(convertPointToClientFormat(point));
@@ -148,14 +129,14 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
         }
     }
 
-    private Point convertPointToClientFormat(InfluxPoint point) {
+    private Point convertPointToClientFormat(InfluxPoint point) throws UnexpectedConditionException {
         Point clientPoint = Point.measurement(point.getMeasurementName()).time(point.getTime(), WritePrecision.MS);
         setPointValue(point.getValue(), clientPoint);
-        point.getTags().entrySet().forEach(e -> clientPoint.addTag(e.getKey(), e.getValue()));
+        point.getTags().forEach(clientPoint::addTag);
         return clientPoint;
     }
 
-    private void setPointValue(@Nullable Object value, Point point) {
+    private void setPointValue(@Nullable Object value, Point point) throws UnexpectedConditionException {
         if (value instanceof String) {
             point.addField(FIELD_VALUE_NAME, (String) value);
         } else if (value instanceof Number) {
@@ -165,36 +146,26 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
         } else if (value == null) {
             point.addField(FIELD_VALUE_NAME, (String) null);
         } else {
-            throw new UnnexpectedConditionException("Not expected value type");
+            throw new UnexpectedConditionException("Not expected value type");
         }
     }
 
-    /**
-     * Executes Flux query
-     *
-     * @param query Query
-     * @return Query results
-     */
     @Override
     public List<InfluxRow> query(String query) {
         final QueryApi currentQueryAPI = queryAPI;
         if (currentQueryAPI != null) {
             List<FluxTable> clientResult = currentQueryAPI.query(query);
-            return convertClientResutToRepository(clientResult);
+            return clientResult.stream().flatMap(this::mapRawResultToHistoric).toList();
         } else {
             logger.warn("Returning empty list because queryAPI isn't present");
-            return Collections.emptyList();
+            return List.of();
         }
-    }
-
-    private List<InfluxRow> convertClientResutToRepository(List<FluxTable> clientResult) {
-        return clientResult.stream().flatMap(this::mapRawResultToHistoric).collect(Collectors.toList());
     }
 
     private Stream<InfluxRow> mapRawResultToHistoric(FluxTable rawRow) {
         return rawRow.getRecords().stream().map(r -> {
             String itemName = (String) r.getValueByKey(InfluxDBConstants.TAG_ITEM_NAME);
-            if (itemName == null) { // use measurement name if item is not tagged
+            if (itemName == null) {
                 itemName = r.getMeasurement();
             }
             Object value = r.getValueByKey(COLUMN_VALUE_NAME_V2);
@@ -203,11 +174,6 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
         });
     }
 
-    /**
-     * Return all stored item names with it's count of stored points
-     *
-     * @return Map with <ItemName,ItemCount> entries
-     */
     @Override
     public Map<String, Integer> getStoredItemsCount() {
         final QueryApi currentQueryAPI = queryAPI;
@@ -221,13 +187,19 @@ public class InfluxDB2RepositoryImpl implements InfluxDBRepository {
                     + "  |> group()";
 
             List<FluxTable> queryResult = currentQueryAPI.query(query);
-            queryResult.stream().findFirst().orElse(new FluxTable()).getRecords().forEach(row -> {
-                result.put((String) row.getValueByKey(TAG_ITEM_NAME), ((Number) row.getValue()).intValue());
-            });
+            Objects.requireNonNull(queryResult.stream().findFirst().orElse(new FluxTable())).getRecords()
+                    .forEach(row -> {
+                        result.put((String) row.getValueByKey(TAG_ITEM_NAME), ((Number) row.getValue()).intValue());
+                    });
             return result;
         } else {
             logger.warn("Returning empty result  because queryAPI isn't present");
             return Collections.emptyMap();
         }
+    }
+
+    @Override
+    public FilterCriteriaQueryCreator createQueryCreator() {
+        return new InfluxDB2FilterCriteriaQueryCreatorImpl(configuration, influxDBMetadataService);
     }
 }
